# 2025-06-mxlpy-workshop

./: .gitignore  .pre-commit-config.yaml  README.md  main.ipynb  models.py  presentation.md  pyproject.toml
