[project]
name = "workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "mxlbricks>=0.2.0",
    "mxlpy[torch]>=0.21.0",
]

[tool.bandit]
skips = ["B101", "B301", "B403", "B404", "B603", "B607"]

[tool.pyright]
pythonVersion = "3.12"
reportMissingModuleSource = "none"
include = [
    "docs",
    "src",
    "tests",
]
exclude = [
    "**/__pycache__",
    "tmp",
]
strict = []
deprecateTypingAliases = true

[tool.ruff]
indent-width = 4
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = [
    "ANN401",  # any
    "C901",    # too complex
    "COM812",  # missing trailing comma  # "D", # all of documenetation
    "D",
    "E501",    # line-too-long
    "ERA001",  # commented-out code
    "FIX001",  # line contains FIXME
    "ISC001",  # single line implicit string concat
    "N806",    # non-lowercase variable
    "PGH003",  # specific rule type ignore
    "S110",    # try-except-pass
    "S301",    # pickle usage
    "TD001",   # invalid todo tag
    "TD002",   # missing todo author
    "TD003",   # missing todo link
    "TD004",   # missing todo version
    "TD005",   # missing todo date
    "TRY003",  # raise vanilla args
    "PLR0912", # too many branches
    "PLR0911", # too many statements
    "PLR0913", # max num of arguments
    "PLR0915", # too many lines
    "PD010",   # pivot table
    "PT011",   # pytest.raises is too broad
    "RUF022",  # unsorted all
    "TC006",   # cast("type")
    "N803",    # lowercase name
]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    "T201", # print statements
    "D",    # all of documentation
]
"tests/*" = [
    "S101",    # assert
    "D",       # all of documentation
    "PLR2004", # magic comparisons
    "SLF",
    "PD901",   # "df" name
]

[tool.tomlsort]
spaces_before_inline_comment = 2
spaces_indent_inline_array = 2
trailing_comma_inline_array = true
